--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="assets/jquery-icon.png" type="image/png" />
+    <link rel="icon" href="assets/icons/jquery-icon.png" type="image/png" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="css/index.css" type="text/css" />
     <title>jQuery Projects</title>
   </head>
   <body>
     <h1>jQuery Projects</h1>
     <a target="_blank" href="https://github.com/swshadows/jquery-projects">
       <button>
-        <img width="32" src="assets/github-icon.png" alt="Github Icon" />
+        <img width="32" src="assets/icons/github-icon.png" alt="Github Icon" />
         <p style="margin: 1px 0">Repository</p>
       </button>
     </a>
@@ -36,9 +37,19 @@
         <td>A simple calculator</td>
       </tr>
       <tr>
+        <td>📁 Cronometer</td>
+        <td><a href="src/crono.html">Link</a></td>
+        <td>A simple cronometer</td>
+      </tr>
+      <tr>
         <td>📁 Diceroll</td>
         <td><a href="src/dice.html">Link</a></td>
         <td>A diceroller for anything random</td>
+      </tr>
+      <tr>
+        <td>📁 HEX Color Picker</td>
+        <td><a href="src/hexpicker.html">Link</a></td>
+        <td>A color picker</td>
       </tr>
       <tr>
         <td>📁 MPlayer</td>
@@ -49,6 +60,21 @@
         <td>📁 Passgen</td>
         <td><a href="src/passgen.html">Link</a></td>
         <td>A password generator</td>
+      </tr>
+      <tr>
+        <td>📁 Quiz</td>
+        <td><a href="src/quiz.html">Link</a></td>
+        <td>A math quiz generator</td>
+      </tr>
+      <tr>
+        <td>📁 Reference Generator</td>
+        <td><a href="src/refgen.html">Link</a></td>
+        <td>A bibliographic reference generator based on ABNT rules</td>
+      </tr>
+      <tr>
+        <td>📁 Timer</td>
+        <td><a href="src/timer.html">Link</a></td>
+        <td>A simple timer</td>
       </tr>
     </table>
 
