--- a/src/passgen.html
+++ b/src/passgen.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../assets/passgen-icon.png" type="image/png" />
+    <link rel="icon" href="../assets/icons/passgen-icon.png" type="image/png" />
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
+    <link rel="stylesheet" href="../css/passgen.css" type="text/css" />
     <title>Password Generator</title>
   </head>
   <body>
     <a href="../index.html">Go back to the main page</a>
     <p>This program generates a random password and copies it to your clipboard</p>
-    <p>The random password is always the recommended size of 12-15 characters long</p>
+    <p>The random password size ranges from 8 to 128</p>
     <textarea id="pass-results" type="textarea" placeholder="Pass will be generated here"></textarea>
     <button id="pass-copy">Copy to clipboard</button>
     <button id="pass-generate">Generate</button>
