--- a/src/caecipher.html
+++ b/src/caecipher.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../assets/caecipher-icon.png" type="image/png" />
+    <link rel="icon" href="../assets/icons/caecipher-icon.png" type="image/png" />
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
+    <link rel="stylesheet" href="../css/caecypher.css" type="text/css" />
     <title>Caesar Cipher</title>
   </head>
   <body>
