--- a/src/mplayer.html
+++ b/src/mplayer.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../assets/mplayer-icon.png" type="image/png" />
+    <link rel="icon" href="../assets/icons/mplayer-icon.png" type="image/png" />
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
+    <link rel="stylesheet" href="../css/mplayer.css" type="text/css" />
     <title>Web Music Player</title>
   </head>
   <body>
