Atualizando para PT-BR

--- a/index.html
+++ b/index.html
@@ -14,72 +14,71 @@
     <a target="_blank" href="https://github.com/swshadows/jquery-projects">
       <button>
         <img width="32" src="assets/icons/github-icon.png" alt="Github Icon" />
-        <p style="margin: 1px 0">Repository</p>
+        <p style="margin: 1px 0">Repositório</p>
       </button>
     </a>
-    <p>This website is dedicated for micro projects for practicing the jQuery framework and programming logic</p>
-    <p>The styling of this site is basic on purpose, since styling and design is not the focus of this project</p>
+    <p>Este site é dedicado a microprojetos para praticar o framework jQuery e lógica de programação.</p>
 
     <table id="index-table">
       <tr>
-        <th>Project Name</th>
-        <th>Project Link</th>
-        <th>Project Description</th>
+        <th>Nome</th>
+        <th>Link</th>
+        <th>Descrição</th>
       </tr>
       <tr>
         <td>📁 Caesar Cipher</td>
         <td><a href="src/caecipher.html">Link</a></td>
-        <td>A caesar cypher and decypher</td>
+        <td>Um cifrador e decifrador de Cesar</td>
       </tr>
       <tr>
         <td>📁 Calculatron</td>
         <td><a href="src/calculatron.html">Link</a></td>
-        <td>A simple calculator</td>
+        <td>Uma calculadora simples</td>
       </tr>
       <tr>
-        <td>📁 Cronometer</td>
+        <td>📁 Cronometro</td>
         <td><a href="src/crono.html">Link</a></td>
-        <td>A simple cronometer</td>
+        <td>Um cronometro simples</td>
       </tr>
       <tr>
-        <td>📁 Diceroll</td>
+        <td>📁 Dados</td>
         <td><a href="src/dice.html">Link</a></td>
-        <td>A diceroller for anything random</td>
+        <td>Um rolador de dados para qualquer coisa aleatória</td>
       </tr>
       <tr>
-        <td>📁 HEX Color Picker</td>
+        <td>📁 HEX Cores</td>
         <td><a href="src/hexpicker.html">Link</a></td>
-        <td>A color picker</td>
+        <td>Um selecionador de cores</td>
       </tr>
       <tr>
         <td>📁 MPlayer</td>
         <td><a href="src/mplayer.html">Link</a></td>
-        <td>A simple music player</td>
+        <td>Um player de musicas simples</td>
       </tr>
       <tr>
         <td>📁 Passgen</td>
         <td><a href="src/passgen.html">Link</a></td>
-        <td>A password generator</td>
+        <td>Um gerador de senhas</td>
       </tr>
       <tr>
         <td>📁 Quiz</td>
         <td><a href="src/quiz.html">Link</a></td>
-        <td>A math quiz generator</td>
+        <td>Um gerador de quizes de matemática</td>
       </tr>
       <tr>
-        <td>📁 Reference Generator</td>
+        <td>📁 Referências ABTN</td>
         <td><a href="src/refgen.html">Link</a></td>
-        <td>A bibliographic reference generator based on ABNT rules</td>
+        <td>Um gerador de referências bibliográficas baseado nas regras da ABNT</td>
       </tr>
       <tr>
-        <td>📁 Timer</td>
+        <td>📁 Temporizador</td>
         <td><a href="src/timer.html">Link</a></td>
-        <td>A simple timer</td>
+        <td>Um temporizador simples</td>
       </tr>
     </table>
 
     <footer>
-      <p id="index-footer">This project was made by <a target="_blank" href="https://github.com/swshadows">@swshadows</a>. All rights reserved. Check my <a target="_blank" href="https://swshadows.github.io/portfolio/#">portfolio</a></p>
+      <p id="index-footer">Esse projeto foi feito por <a target="_blank" href="https://github.com/swshadows">@swshadows</a>. Todos os direitos reservados. Veja meu <a target="_blank" href="https://swshadows.github.io/portfolio/#">portfólio</a></p>
     </footer>
   </body>
 </html>
