--- a/src/caecipher.html
+++ b/src/caecipher.html
@@ -10,18 +10,18 @@
     <title>Caesar Cipher</title>
   </head>
   <body>
-    <a href="../index.html">Go back to the main page</a>
-    <p>This program ciphers and deciphers text following Caesar Cipher's rule</p>
-    <p>Read more about Caesar Cipher <a target="_blank" href="https://en.wikipedia.org/wiki/Caesar_cipher">here</a></p>
-    <p>Please insert valid characters, invalid characters will yield unexpected results. Accepted special characters are 'space'( ), 'dot'(.) and 'comma'(,)</p>
+    <a href="../index.html">Voltar a página principal</a>
+    <p>Esse programa cifra e decifra textos baseando-se na regra da Cifra de Cesar</p>
+    <p>Veja mais sobre cifra de Cesar <a target="_blank" href="https://pt.wikipedia.org/wiki/Cifra_de_César">aqui</a></p>
+    <p>Insira caracteres válidos; caracteres inválidos produzirão resultados inesperados. Os caracteres especiais aceitos são 'espaço' (), 'ponto' (.) E 'vírgula' (,)</p>
     <div class="dis-b">
       <input id="cae-cyph-input" type="text" />
-      <button id="cae-cyph-btn">Cypher</button>
+      <button id="cae-cyph-btn">Cifrar</button>
     </div>
 
     <div class="dis-b">
       <input id="cae-decyph-input" type="text" />
-      <button id="cae-decyph-btn">Decypher</button>
+      <button id="cae-decyph-btn">Decifrar</button>
     </div>
 
     <p id="cae-results"></p>
