--- a/src/calculatron.html
+++ b/src/calculatron.html
@@ -10,9 +10,8 @@
     <title>Calculatron</title>
   </head>
   <body>
-    <a href="../index.html">Go back to the main page</a>
-    <p>My own take on a calculator app</p>
-    <p>May or may not contain more operators in the future</p>
+    <a href="../index.html">Voltar a página principal</a>
+    <p>Minha versão da calculadora</p>
 
     <div id="calc-div" class="calc-body">
       <fieldset>
