--- a/src/dice.html
+++ b/src/dice.html
@@ -7,18 +7,18 @@
     <link rel="icon" href="../assets/icons/dice-icon.png" type="image/png" />
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
     <link rel="stylesheet" href="../css/dice.css" type="text/css" />
-    <title>Diceroller</title>
+    <title>Dados</title>
   </head>
   <body>
-    <a href="../index.html">Go back to the main page</a>
-    <p>This program randomizes dice rolls. Useful for whenever you need a random factor</p>
-    <p>Be careful when inputting large numbers of dices</p>
+    <a href="../index.html">Voltar a página principal</a>
+    <p>Este programa randomiza jogadas de dados. Útil para quando você precisar de um fator aleatório</p>
+    <p>Cuidado se for colocar um número muito alto de dados</p>
 
     <div id="dice-body">
       <input id="dice-input" type="number" step="0" placeholder="Input dices qty" />
-      <button id="dice-add-btn">Add dices</button>
-      <button id="dice-clear-btn">Clear dices</button>
-      <button id="dice-roll-btn">ROLL!</button>
+      <button id="dice-add-btn">Adicionar daos</button>
+      <button id="dice-clear-btn">Remover todos os dados</button>
+      <button id="dice-roll-btn">ROLAR!</button>
       <div id="dice-container"></div>
     </div>
     <p id="dice-maxroll"></p>
