--- a/src/hexpicker.html
+++ b/src/hexpicker.html
@@ -7,26 +7,26 @@
     <link rel="icon" href="../assets/icons/hexpicker-icon.png" type="image/png" />
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
     <link rel="stylesheet" href="../css/hexpicker.css" type="text/css" />
-    <title>HEX Color Picker</title>
+    <title>HEX Cores</title>
   </head>
   <body>
-    <a href="../index.html">Go back to the main page</a>
-    <p>This program converts color to hex code and vice-versa.</p>
+    <a href="../index.html">Voltar a página principal</a>
+    <p>Esse programa converte cores para código hex e vice-versa.</p>
 
     <details class="hexpicker-details">
-      <summary>Convert Color to HEX</summary>
-      <label id="hexpicker-cthlabel" for="hexpicker-cthcolor">Select a color</label>
+      <summary>Cor para HEX</summary>
+      <label id="hexpicker-cthlabel" for="hexpicker-cthcolor">Selecione uma cor</label>
       <div class="hexpicker-divs">
         <input id="hexpicker-cthcolor" class="hexpicker-inputs" type="color" />
         <input id="hexpicker-cthcode" class="hexpicker-inputs" type="text" disabled />
-        <button id="hexpicker-cthbtn">Copy to clipboard</button>
+        <button id="hexpicker-cthbtn">Copiar para a área de transferencia</button>
       </div>
     </details>
 
     <details class="hexpicker-details">
-      <summary>Convert HEX to Color</summary>
+      <summary>HEX para Cor</summary>
       <div class="hexpicker-divs">
-        <input id="hexpicker-htccode" class="hexpicker-inputs" type="text" placeholder="Input HEX code (numbers only)" />
+        <input id="hexpicker-htccode" class="hexpicker-inputs" type="text" placeholder="Código HEX (somente numeros)" />
         <input id="hexpicker-htccolor" class="hexpicker-inputs" type="color" />
       </div>
     </details>
