--- a/src/mplayer.html
+++ b/src/mplayer.html
@@ -7,18 +7,18 @@
     <link rel="icon" href="../assets/icons/mplayer-icon.png" type="image/png" />
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
     <link rel="stylesheet" href="../css/mplayer.css" type="text/css" />
-    <title>Web Music Player</title>
+    <title>MPlayer</title>
   </head>
   <body>
-    <a href="../index.html">Go back to the main page</a>
-    <p>This program plays music from your computer, simple as that</p>
-    <p>Click on the <strong>Upload a song</strong>, select a song from your device then click <strong>Load</strong> and voila, it's read to play a song</p>
+    <a href="../index.html">Voltar a página principal</a>
+    <p>Esse programa toca músicas do seu computador</p>
+    <p>Clique em<strong>Upload</strong>, escolha uma música e depois clique em <strong>Carregar</strong>.</p>
     <div id="mplayer-body">
       <fieldset>
         <legend>MPlayer</legend>
-        <label id="mplayer-input-label" for="mplayer-input">Upload a song</label>
+        <label id="mplayer-input-label" for="mplayer-input">Upload</label>
         <input id="mplayer-input" type="file" accept=".mp3,.wav,.ogg" />
-        <button id="mplayer-upl-btn">Load</button>
+        <button id="mplayer-upl-btn">Carregar</button>
         <audio id="mplayer-audio" class="dis-b" controls>
           <source src="" id="mplayer-audio-src" />
         </audio>
