--- a/src/passgen.html
+++ b/src/passgen.html
@@ -7,15 +7,15 @@
     <link rel="icon" href="../assets/icons/passgen-icon.png" type="image/png" />
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
     <link rel="stylesheet" href="../css/passgen.css" type="text/css" />
-    <title>Password Generator</title>
+    <title>Passgen</title>
   </head>
   <body>
-    <a href="../index.html">Go back to the main page</a>
-    <p>This program generates a random password and copies it to your clipboard</p>
-    <p>The random password size ranges from 8 to 128</p>
-    <textarea id="pass-results" type="textarea" placeholder="Pass will be generated here"></textarea>
-    <button id="pass-copy">Copy to clipboard</button>
-    <button id="pass-generate">Generate</button>
+    <a href="../index.html">Voltar a página principal</a>
+    <p>Esse programa gera uma senha aleatória</p>
+    <p>Senhas seguem o padrão de tamanho (8 a 128 caracteres)</p>
+    <textarea id="pass-results" type="textarea" placeholder="Senha será gerada aqui"></textarea>
+    <button id="pass-copy">Copiar para a área de transferência</button>
+    <button id="pass-generate">Gerar</button>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="../js/passgen.js"></script>
