--- a/src/quiz.html
+++ b/src/quiz.html
@@ -10,12 +10,12 @@
     <title>Quiz</title>
   </head>
   <body>
-    <a href="../index.html">Go back to the main page</a>
-    <p>This program generates a quiz, test your knowledge</p>
+    <a href="../index.html">Voltar para a página principal</a>
+    <p>Esse programa gera um quiz aleatório de matemática.</p>
 
-    <button id="quiz-generate">Generate</button>
+    <button id="quiz-generate">Gerar</button>
     <div id="quiz-q"></div>
-    <button id="quiz-answer">Answer</button>
+    <button id="quiz-answer">Responder</button>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="../js/quiz.js"></script>
   </body>
