--- a/src/timer.html
+++ b/src/timer.html
@@ -10,23 +10,23 @@
     <title>Timer</title>
   </head>
   <body>
-    <a href="../index.html">Go back to the main page</a>
-    <p>This program is a simple timer, also known as a reverse cronometer.</p>
+    <a href="../index.html">Voltar a página principal</a>
+    <p>Esse programa é um temporizador.</p>
 
     <div id="timer-body">
       <div class="d-flcenter">
-        <input type="number" min="0" id="timer-hours" placeholder="Hours" />
-        <input type="number" min="0" max="59" id="timer-mins" placeholder="Minutes" />
-        <input type="number" min="1" max="59" id="timer-secs" placeholder="Seconds" />
+        <input type="number" min="0" id="timer-hours" placeholder="Horas" />
+        <input type="number" min="0" max="59" id="timer-mins" placeholder="Minutos" />
+        <input type="number" min="1" max="59" id="timer-secs" placeholder="Segundos" />
       </div>
       <div class="d-flcenter">
-        <button id="timer-start">Start</button>
-        <button id="timer-reset">Stop</button>
+        <button id="timer-start">Iniciar</button>
+        <button id="timer-reset">Parar</button>
       </div>
 
       <div>
         <fieldset>
-          <legend>Timetron</legend>
+          <legend>Timer</legend>
           <p id="timer-time">00:00:00</p>
         </fieldset>
       </div>
