--- a/src/crono.html
+++ b/src/crono.html
@@ -7,27 +7,27 @@
     <link rel="icon" href="../assets/icons/clock-icon.png" type="image/png" />
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
     <link rel="stylesheet" href="../css/clock.css" type="text/css" />
-    <title>Cronometer</title>
+    <title>Cronometro</title>
   </head>
   <body>
-    <a href="../index.html">Go back to the main page</a>
-    <p>This program is a simple cronometer. Not too much to say here :P</p>
+    <a href="../index.html">Voltar a página principal</a>
+    <p>Um simples cronometro. Não tenho muito a dizer :P</p>
 
     <div id="crono-body">
       <div class="d-flcenter">
-        <button id="crono-start">Start</button>
+        <button id="crono-start">Começar</button>
         <button id="crono-lap">Lap</button>
-        <button id="crono-reset">Reset</button>
+        <button id="crono-reset">Resetar</button>
       </div>
 
       <div>
         <fieldset>
-          <legend>Cronometron</legend>
+          <legend>Crono</legend>
           <p id="crono-time">0:00:0000</p>
         </fieldset>
 
         <div id="crono-laps">
-          <div class="d-flcenter">Lap Counter</div>
+          <div class="d-flcenter">Contador de Laps</div>
         </div>
       </div>
     </div>
