Atualizando nome do projeto

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="icon" href="assets/icons/jquery-icon.png" type="image/png" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <link rel="stylesheet" href="css/index.css" type="text/css" />
-    <title>jQuery Projects</title>
+    <title>swQuery</title>
   </head>
   <body>
-    <h1>jQuery Projects</h1>
+    <h1>swQuery</h1>
     <a target="_blank" href="https://github.com/swshadows/jquery-projects">
       <button>
         <img width="32" src="assets/icons/github-icon.png" alt="Github Icon" />
