Adicionando meta tags e banner

--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <link rel="icon" href="assets/icons/jquery-icon.png" type="image/png" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <link rel="stylesheet" href="css/index.css" type="text/css" />
+    <!-- Primary Meta Tags -->
+    <title>swQuery</title>
+    <meta name="title" content="swQuery" />
+    <meta name="description" content="Projeto didático em jQuery para lógica de programação feito por @swshadows!" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="swQuery" />
+    <meta property="og:description" content="Projeto didático em jQuery para lógica de programação feito por @swshadows!" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/swshadows/swquery/main/assets/meta-preview.png" />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="swQuery" />
+    <meta property="twitter:description" content="Projeto didático em jQuery para lógica de programação feito por @swshadows!" />
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/swshadows/swquery/main/assets/meta-preview.png" />
     <title>swQuery</title>
   </head>
   <body>
